--- a/Projeto/public/css/global.css
+++ b/Projeto/public/css/global.css
@@ -10,6 +10,9 @@
     --cor-margem:#2A6C0B;
     --cor-hover:#1f6502;
     --cor-main: #FFFFFF;
+    --cor-azul-claro:#00B5E7;
+    --cor-fundo-cinza:#D9D9D9;
+    --cor-texto-cinza: #6A6A6A;
     --fonte-titulo: "Konkhmer Sleokchher", system-ui;
     --fonte-texto: "Inter", sans-serif;
 }
