--- a/Projeto/public/css/minhas_monitorias.css
+++ b/Projeto/public/css/minhas_monitorias.css
@@ -2,6 +2,49 @@ body{
   background-color:var(--cor-main);
 }
 
+.abas{
+  height: 40px;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+}
+
+.aba-espera{
+  background-color: #FFFFFF;
+  height: 100%;
+  width: 150px;
+  border: 2px solid #000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.aba-espera:hover{
+  background-color: #cccccc;
+}
+
+.aba-espera.selecionado{
+  background-color: #cccccc;
+}
+
+.aba-concluido{
+  background-color: #FFFFFF;
+  height: 100%;
+  width: 150px;
+  border: 2px solid #000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.aba-concluido:hover{
+  background-color: #cccccc;
+}
+
+.aba-concluido.selected{
+  background-color: #cccccc;
+}
+
 .card {
     width: 322px;
     height: 210px;
@@ -11,7 +54,19 @@ body{
     overflow: hidden;
     background-color: white;
   }
+
+.card-concluido{
   
+}
+
+.card-grid{
+  display: flex;
+  flex-wrap: wrap; 
+  gap: 30px;
+  padding: 15px;
+  justify-content: center;
+}  
+
 .card-top {
   background-color: #00b6f1;
   height: 60%;
@@ -52,13 +107,6 @@ body{
   font-size: 13px;
 }
 
-.card-grid{
-  display: flex;
-  flex-wrap: wrap; 
-  gap: 30px;
-  padding: 15px;
-  justify-content: center;
-}
 
 .options-popup {
   position: absolute;
