--- a/Projeto/public/css/adminPage.css
+++ b/Projeto/public/css/adminPage.css
@@ -2,15 +2,17 @@
     width: 100%;
     height: 87vh;
     background: #FFF;
-    position: relative;
+    z-index: 2;
+
 }
 
 .admin-procurar_alunos{
     position: absolute;
     width: 50rem;
-    top: 3rem;
+    top: 12rem;
     left: 5%;
     height: 45rem;
+    z-index: 2;
     border: 2px solid black;
     background: #F3F3F3;
 }
@@ -47,7 +49,7 @@
     display: flex;
     height: 37rem;
     overflow-y: scroll;
-    top: 3rem;
+    top: 12rem;
     gap: 4rem;
     right: 0;
 }
