--- a/Projeto/public/css/menu.css
+++ b/Projeto/public/css/menu.css
@@ -8,16 +8,17 @@ a{
 }
 
 .cabecalho {
+    position: relative;
+    z-index: 9999;
+}
+
+.cabecalho-navegacao{
     position: fixed;
+    z-index: 9999;
     top: 0;
     width: 100vw;
     background-color: var(--cor-menu);
     height: 13vh;
-}
-
-.cabecalho-navegacao{
-    width: 100%;
-    height: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -39,11 +40,11 @@ a{
 }
 
 .cabecalho-navegacao-menu-elementos{
-    position: absolute;
+    position: fixed;
     display: block;
     top: 13vh;
     transform: translate(-100%);
-    z-index: 100;
+    z-index: 9999;
 }
 .cabecalho-navegacao-menu-elemento{
     list-style-type: none;
