--- a/Projeto/public/css/visualizacao_monitoria.css
+++ b/Projeto/public/css/visualizacao_monitoria.css
@@ -15,27 +15,6 @@ form {
     align-items: center;
 }
 
-.Sair-monitoria{
-  position: absolute;
-  top: 10rem;
-  background-color: #979797;
-  height: 3rem;
-  width: 3rem;
-  font-size: 1.5rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: rgb(219, 219, 219);
-  border-radius: 50%;
-  left: 2rem;
-}
-
-.Sair-monitoria:hover {
-  transition: 0.3s;
-  opacity: 0.5;
-  cursor: pointer;
-}
-
 /* Contêiner principal do formulário */
 .container-formulario {
     position: relative;
@@ -77,7 +56,8 @@ form {
 .corpo-formulario {
     padding: 30px;
     display: flex;
-    flex-wrap: wrap; 
+    align-items: center;
+    flex-direction: column;
     gap: 20px; 
     background-color: #fff;
 }
@@ -85,8 +65,8 @@ form {
 .linha-formulario {
     display: flex;
     align-items: center; 
-    align-content: center;
-    flex: 1 1 calc(50% - 10px); 
+    width: 20rem;
+
     box-sizing: border-box; 
     color: black;
     margin: 20px 60px 20px 0px;
@@ -185,96 +165,3 @@ form {
     }
 }
 
-.modal-overlay {
-    display: none; /* escondido por padrão */
-    position: fixed;
-    top: 0; left: 0;
-    width: 100%; height: 100%;
-    background: rgba(0,0,0,0.7);
-    z-index: 999;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  /* Caixa do pop-up */
-  .modal-box {
-    background: #fff;
-    padding: 20px;
-    border-radius: 12px;
-    width: 320px;
-    text-align: center;
-    box-shadow: 0 5px 15px rgba(0,0,0,0.3);
-  }
-  
-  .modal-box h3 {
-    margin-bottom: 15px;
-    font-weight: 400;
-    font-size: 18px;
-  }
-  
-  .modal-box button {
-    margin: 5px;
-    padding: 8px 16px;
-    border: none;
-    border-radius: 6px;
-    cursor: pointer;
-    font-weight: bold;
-  }
-  
-  .btn-confirmar {
-    background: #28a745;
-    color: white;
-  }
-  
-  .btn-cancelar {
-    background: #dc3545;
-    color: white;
-  }
-
-/* Modal-Sair */
-
-  .modal-overlay-sair {
-    display: none; /* escondido por padrão */
-    position: fixed;
-    top: 0; left: 0;
-    width: 100%; height: 100%;
-    background: rgba(0,0,0,0.7);
-    z-index: 999;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  /* Caixa do pop-up */
-  .modal-box-sair {
-    background: #fff;
-    padding: 20px;
-    border-radius: 12px;
-    width: 320px;
-    text-align: center;
-    box-shadow: 0 5px 15px rgba(0,0,0,0.3);
-  }
-  
-  .modal-box-sair h3 {
-    margin-bottom: 15px;
-    font-weight: 400;
-    font-size: 18px;
-  }
-  
-  .modal-box-sair button {
-    margin: 5px;
-    padding: 8px 16px;
-    border: none;
-    border-radius: 6px;
-    cursor: pointer;
-    font-weight: bold;
-  }
-  
-  .btn-confirmar-sair {
-    background: #28a745;
-    color: white;
-  }
-  
-  .btn-cancelar-sair {
-    background: #dc3545;
-    color: white;
-  }
