--- a/Projeto/public/css/relatorio.css
+++ b/Projeto/public/css/relatorio.css
@@ -13,7 +13,6 @@ form {
     justify-content: center;
     height: 87vh;
     align-items: center;
-    justify-content: space-around;
     gap: 40px;
 }
 
@@ -23,6 +22,7 @@ form {
     width: 760px; 
     height: 700px;
     max-width: 90%; 
+    margin: auto; 
     border: 1px solid black;
     overflow: hidden;
 }
@@ -58,7 +58,7 @@ form {
     padding: 30px;
     display: flex;
     flex-wrap: wrap; 
-    gap: 30px; 
+    gap: 20px; 
     background-color: #fff;
     display: flex;
     flex-direction: column;
@@ -124,8 +124,8 @@ form {
 .container-lateral {
     display: flex;
     flex-direction: column;
-    gap: 30px;
-    align-items: center;
+    gap: 20px;
+    width: 400px;
 }
 
 .container-lateral-titulo {
@@ -135,27 +135,22 @@ form {
 .tabela-alunos {
     width: 100%;
     border-collapse: collapse;
-    width: 500px;
 }
 
 .tabela-alunos td {
-    border-bottom: 1px solid black;
-    padding: 12px 7px;
-    font-size: 16px;
-    text-align: center;
+    border: 1px solid #ccc;
+    padding: 5px;
+    font-size: 14px;
 }
 
 .box-lateral {
     background-color: var(--cor-fundo-cinza);
-    min-height: 200px;
+    min-height: 150px;
     border: 1px solid black;
-    overflow-y: auto;
-    height: 230px;
 }
 
 #areaTextoFeedback {
     height: 280px;
-    width: 500px;
 }
 
 .btn-salvar {
