--- a/Projeto/public/css/adminPage.css
+++ b/Projeto/public/css/adminPage.css
@@ -3,15 +3,14 @@
     height: 87vh;
     background: #FFF;
     z-index: 2;
-
+    display: flex;
+    justify-content: center;
 }
 
 .admin-procurar_alunos{
-    position: absolute;
     width: 50rem;
-    top: 12rem;
-    left: 5%;
     height: 45rem;
+    margin-top: 2rem;
     z-index: 2;
     border: 2px solid black;
     background: #F3F3F3;
@@ -97,6 +96,7 @@
 }
 
 .linha-foto{
+    position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -114,9 +114,34 @@
     width: 23px;
 }
 
+.select{
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    background-color: rgb(224, 224, 224);
+    font-size: 0.9rem;
+}
+
+.select-materias{
+    width: 24rem;
+}
+
+.checkbox-monitor:hover {
+    cursor: pointer;
+}
+
 .foto-table{
-    width: 25px;
-    height: 25px;
+    right: 0.8rem;
+    position: absolute;
+    background-size: cover;
+    background-position: center;
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    image-rendering: -webkit-optimize-contrast;
+    image-rendering: crisp-edges;
+    image-rendering: high-quality;
+    backface-visibility: hidden;
 }
 
 .tabela-alunos-geral{
@@ -133,12 +158,18 @@
     color: white;
     font-weight: bold;
     position: absolute;
-    bottom: 6rem;
+    bottom: 3rem;
     font-size: 1.1rem;
-    right: 27rem;
+    right: 60rem;
     padding: 1.5rem 4rem;
     border-radius: 0.5rem;
     border: none;
+}
+
+.botao_confirmar_inscricao_monitores:hover {
+    cursor: pointer;
+    opacity: 0.6;
+    transition: 0.5s;
 }
 
 h2{
