--- a/Projeto/public/css/minhas_monitorias.css
+++ b/Projeto/public/css/minhas_monitorias.css
@@ -2,6 +2,11 @@ body{
   background-color:var(--cor-main);
 }
 
+.main-content{
+  height: 100%;
+  width: 100%;
+}
+
 .abas{
   height: 40px;
   display: flex;
@@ -191,36 +196,30 @@ body{
 }
 
 /* Estilos para o Botão de Adicionar */
-.botao-adicionar {
-  position: absolute;
-  bottom: 2rem;
-  right: 1rem; 
-  width: 60px;
-  height: 60px;
-  padding: 10px 10px 14px 10px;   
-  background-color: var(--cor-menu); 
-  color: white;   
-  transform: translateY(10%);
-  font-size: 45px; 
-  border: 3px solid var(--cor-margem); 
-  border-radius: 50%; 
-  display: flex;   
-  justify-content: center;
-  align-items: center;
-  cursor: pointer; 
-  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3); 
-  z-index: 999; 
-  transition: background-color 0.3s ease, transform 0.2s ease; 
-}
-
-.botao-adicionar:hover {
+.botaoAdicionar:hover {
+  transition: 0.8s;
   background-color: var(--cor-hover); /
 }
 
-/* Modal-Sair */
+.botaoAdicionar {
+  position: absolute;
+  bottom: 2rem;
+  right: 1rem;
+  width: 60px;
+  height: 60px;
+  background-image: url('../img/formsComponents/mais.png');
+  background-size: cover;     
+  background-position: center;
+  background-repeat: no-repeat;
+
+  border-radius: 50%;
+  cursor: pointer;
+  z-index: 1000;
+}
+
 
 .modal-overlay-sair {
-  display: none; /* escondido por padrão */
+  display: none; 
   position: fixed;
   top: 0; left: 0;
   width: 100%; height: 100%;
@@ -230,7 +229,7 @@ body{
   align-items: center;
 }
 
-/* Caixa do pop-up */
+
 .modal-box-sair {
   background: #fff;
   padding: 20px;
