--- a/Projeto/public/css/minhas_monitorias_inscritas.css
+++ b/Projeto/public/css/minhas_monitorias_inscritas.css
@@ -55,15 +55,11 @@ body{
       background-color: white;
     }
   
-  .card-concluido{
-    
-  }
-  
   .card-grid{
     display: flex;
     flex-wrap: wrap; 
     gap: 30px;
-    padding: 15px;
+    padding: 5rem 3rem 0 3rem;
     justify-content: center;
   }  
   
@@ -106,6 +102,9 @@ body{
   }
   
   .card-content {
+    display: flex;
+    flex-direction: column;
+    gap: 14px;
     padding: 8px 12px;
     font-size: 13px;
   }
