--- a/Projeto/public/css/disciplina.css
+++ b/Projeto/public/css/disciplina.css
@@ -11,10 +11,19 @@ main {
     display: flex;
     justify-content: center; 
     align-items: center;
+    gap: 40px;
     padding: 25px 0; 
     border-bottom: 3px solid var(--cor-margem); 
     margin-bottom: 25px; 
     border-top: 3px solid var(--cor-margem);
+}
+
+.filtro_horario{
+    width: 240px;
+    padding: 15px;
+    border-radius: 15px;
+    font-size: 1rem;
+    text-align: center;
 }
 
 .barra-pesquisa-input {
@@ -38,6 +47,7 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
+    gap: 40px;
     padding: 25px 0;
     border-bottom: 3px solid #2A6C0B;
     flex-shrink: 0;
